// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Widget component should render nothing if widget does not exist 1`] = `
<p
  className="text-danger"
>
  Widget not found 
  unknown
</p>
`;

exports[`Widget component should render widget 1`] = `
<Text
  id="myForm_user_firstname"
  isValid={true}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  onTrigger={[MockFunction]}
  schema={
    Object {
      "key": Array [
        "user",
        "firstname",
      ],
      "type": "text",
    }
  }
  value="my firstname"
  valueIsUpdating={false}
>
  <FieldTemplate
    descriptionId="myForm_user_firstname-description"
    errorId="myForm_user_firstname-error"
    id="myForm_user_firstname"
    isValid={true}
    labelAfter={true}
    valueIsUpdating={false}
  >
    <div
      aria-busy={false}
      className="form-group theme-template"
    >
      <input
        aria-describedby="myForm_user_firstname-description myForm_user_firstname-error"
        aria-invalid={false}
        className="form-control"
        disabled={false}
        id="myForm_user_firstname"
        onBlur={[Function]}
        onChange={[Function]}
        readOnly={false}
        type="text"
        value="my firstname"
      />
      <Message
        descriptionId="myForm_user_firstname-description"
        errorId="myForm_user_firstname-error"
        isValid={true}
      >
        <div>
          <p
            className="help-block"
            id="myForm_user_firstname-description"
            key="description"
          />
          <p
            aria-live="assertive"
            className="help-block"
            id="myForm_user_firstname-error"
            key="error"
            role="status"
          />
        </div>
      </Message>
    </div>
  </FieldTemplate>
</Text>
`;

exports[`Widget component should render widget with the specific displayMode 1`] = `
<TextMode
  id="myForm_user_firstname"
  isValid={true}
  onChange={[MockFunction]}
  onFinish={[MockFunction]}
  onTrigger={[MockFunction]}
  schema={
    Object {
      "key": Array [
        "user",
        "firstname",
      ],
      "type": "text",
    }
  }
  value="my firstname"
  valueIsUpdating={false}
>
  <FieldTemplate
    id="myForm_user_firstname"
  >
    <div
      className="form-group"
    >
      <dt>
        <label
          className="control-label"
          htmlFor="myForm_user_firstname"
        />
      </dt>
      <dd
        id="myForm_user_firstname"
      >
        my firstname
      </dd>
    </div>
  </FieldTemplate>
</TextMode>
`;
